--- a/second_stage.ipynb
+++ b/second_stage.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "PyObject <spacy.lang.en.English object at 0x7efd982c7710>"
+       "PyObject <spacy.lang.en.English object at 0x7f96514dea90>"
       ]
      },
      "execution_count": 3,
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 4,
    "id": "308ad2dc",
    "metadata": {},
    "outputs": [],
@@ -70,37 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "id": "29d03eda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = convert_df(data[:, 1], uniques, rf);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "id": "4af5a039",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = innerjoin(df, data, on =:Article);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "id": "b27a8b97",
+   "execution_count": 5,
+   "id": "267db9dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "509"
+       "937"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +91,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
+   "id": "29d03eda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = convert_df(data[:, 1], uniques, rf);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "aa444612",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 1000)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ENV[\"LINES\"], ENV[\"COLUMNS\"] = 80, 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4af5a039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = innerjoin(df, data, on =:Article);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5b3e0b0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"data-frame\"><p>5 rows × 3 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>Article</th><th>Atoms</th><th>relation</th></tr><tr><th></th><th title=\"String\">String</th><th title=\"Vector{String}\">Array…</th><th title=\"Int64\">Int64</th></tr></thead><tbody><tr><th>1</th><td>USDCHF lower but pair remains stuck in the mud</td><td>[&quot;C&quot;, &quot;M&quot;, &quot;J&quot;, &quot;C&quot;, &quot;P&quot;, &quot;C&quot;, &quot;B&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td></tr><tr><th>2</th><td>Aussie rises as risk appetite rises</td><td>[&quot;M&quot;, &quot;P&quot;, &quot;T&quot;, &quot;C&quot;, &quot;C&quot;, &quot;P&quot;]</td><td>1</td></tr><tr><th>3</th><td>GBPUSD working on its 3rd day higher but the going is relatively slow</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;C&quot;, &quot;M&quot;, &quot;C&quot;, &quot;M&quot;, &quot;J&quot;, &quot;M&quot;, &quot;C&quot;, &quot;P&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td></tr><tr><th>4</th><td>EURUSD remains relatively contained although higher on the day</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;M&quot;, &quot;P&quot;, &quot;M&quot;, &quot;M&quot;, &quot;B&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td></tr><tr><th>5</th><td>Dollar Edges Lower</td><td>[&quot;C&quot;, &quot;C&quot;, &quot;M&quot;]</td><td>0</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ccc}\n",
+       "\t& Article & Atoms & relation\\\\\n",
+       "\t\\hline\n",
+       "\t& String & Array… & Int64\\\\\n",
+       "\t\\hline\n",
+       "\t1 & USDCHF lower but pair remains stuck in the mud & [\"C\", \"M\", \"J\", \"C\", \"P\", \"C\", \"B\", \"M\", \"C\"] & 0 \\\\\n",
+       "\t2 & Aussie rises as risk appetite rises & [\"M\", \"P\", \"T\", \"C\", \"C\", \"P\"] & 1 \\\\\n",
+       "\t3 & GBPUSD working on its 3rd day higher but the going is relatively slow & [\"C\", \"P\", \"T\", \"C\", \"M\", \"C\", \"M\", \"J\", \"M\", \"C\", \"P\", \"M\", \"C\"] & 0 \\\\\n",
+       "\t4 & EURUSD remains relatively contained although higher on the day & [\"C\", \"P\", \"M\", \"P\", \"M\", \"M\", \"B\", \"M\", \"C\"] & 0 \\\\\n",
+       "\t5 & Dollar Edges Lower & [\"C\", \"C\", \"M\"] & 0 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m5×3 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m Article                           \u001b[0m\u001b[1m Atoms                             \u001b[0m\u001b[1m relation \u001b[0m\n",
+       "\u001b[1m     \u001b[0m│\u001b[90m String                            \u001b[0m\u001b[90m Array…                            \u001b[0m\u001b[90m Int64    \u001b[0m\n",
+       "─────┼────────────────────────────────────────────────────────────────────────────────\n",
+       "   1 │ USDCHF lower but pair remains st…  [\"C\", \"M\", \"J\", \"C\", \"P\", \"C\", \"…         0\n",
+       "   2 │ Aussie rises as risk appetite ri…  [\"M\", \"P\", \"T\", \"C\", \"C\", \"P\"]            1\n",
+       "   3 │ GBPUSD working on its 3rd day hi…  [\"C\", \"P\", \"T\", \"C\", \"M\", \"C\", \"…         0\n",
+       "   4 │ EURUSD remains relatively contai…  [\"C\", \"P\", \"M\", \"P\", \"M\", \"M\", \"…         0\n",
+       "   5 │ Dollar Edges Lower                 [\"C\", \"C\", \"M\"]                           0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first(data, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b27a8b97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "509"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nrow(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "2830de9e",
    "metadata": {},
    "outputs": [
@@ -121,7 +208,7 @@
        "234"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,27 +243,6 @@
     "PyPlot.xticks([0,1 ], [\"No relation\", \"Relation\"])\n",
     "PyPlot.ylabel(\"Count\")\n",
     "PyPlot.savefig(\"hist.png\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "id": "a44db7f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(80, 1000)"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ENV[\"LINES\"], ENV[\"COLUMNS\"] = 80, 1000"
    ]
   },
   {
