evaluation process improvement

--- a/second_stage.ipynb
+++ b/second_stage.ipynb
@@ -25,12 +25,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "6693fcf1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling Metrics [cb9f3049-315b-4f05-b90c-a8adaec4da78]\n",
+      "└ @ Base loading.jl:1317\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mModule StatsBase with build ID 5873155674673 is missing from the cache.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39mThis may mean StatsBase [2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91] does not support precompilation but is imported by a module that does.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Base loading.jl:1008\u001b[39m\n",
+      "┌ Info: Skipping precompilation since __precompile__(false). Importing Metrics [cb9f3049-315b-4f05-b90c-a8adaec4da78].\n",
+      "└ @ Base loading.jl:1025\n",
+      "┌ Warning: Replacing docs for `Metrics.bin_to_cat :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.confusion_matrix :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.TFPN :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.binary_accuracy :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.categorical_accuracy :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.sparse_categorical :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.top_k_categorical :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.top_k_sparse_categorical :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.precision :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.recall :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.f_beta_score :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.specificity :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.false_alarm_rate :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.cohen_kappa :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.statsfromTFPN :: NTuple{4, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.classwise_stats :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n",
+      "┌ Warning: Replacing docs for `Metrics.global_stats :: Tuple{Any, Any}` in module `Metrics`\n",
+      "└ @ Base.Docs docs/Docs.jl:240\n"
+     ]
+    }
+   ],
    "source": [
-    "using PyCall, BSON, DecisionTree, Random, CSV"
+    "using PyCall, BSON, DecisionTree, Random, CSV, Metrics"
    ]
   },
   {
@@ -42,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "PyObject <spacy.lang.en.English object at 0x7f0ed367ced0>"
+       "PyObject <spacy.lang.en.English object at 0x7f1e92dabdd0>"
       ]
      },
      "execution_count": 3,
@@ -413,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "6eb89f07",
    "metadata": {},
    "outputs": [
@@ -423,7 +471,7 @@
        "model_2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "b3640fe7",
    "metadata": {},
    "outputs": [],
@@ -623,264 +671,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "b115a93c",
+   "execution_count": 62,
+   "id": "fa48435f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "recall (generic function with 1 method)"
+       "evaluate (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function recall(target, model)\n",
-    "    p1 = filter(row -> (row[model] == 1) & (row[target] == 1), data)\n",
-    "    p2 = filter(row -> row[target] == 1, data)\n",
-    "    return nrow(p1)/nrow(p2)\n",
+    "function evaluate(model)\n",
+    "    tp = nrow(filter(row -> (row[model] == 1) & (row[\"relation\"] == 1), data))\n",
+    "    fn = nrow(filter(row -> (row[model] == 0) & (row[\"relation\"] == 1), data))\n",
+    "    fp = nrow(filter(row -> (row[model] == 1) & (row[\"relation\"] == 0), data))\n",
+    "    tn = nrow(filter(row -> (row[model] == 0) & (row[\"relation\"] == 0), data))\n",
+    "    acc = (tp + tn)/(tp+fn+fp+tn)\n",
+    "    er = (fp+fn)/(tp+fp+tn+fn)\n",
+    "    sn = tp/(tp+fn)\n",
+    "    sp = tn/(tn+fp)\n",
+    "    p = tp/(tp+fp)\n",
+    "    r = tp/(tp+fn)\n",
+    "    fm = (2*p*r)/(p+r)\n",
+    "    println(\"Accuracy: \", acc)\n",
+    "    println(\"Error rate: \", er)\n",
+    "    println(\"Sensitivity: \", sn)\n",
+    "    println(\"Specificity: \", sp)\n",
+    "    println(\"Precision: \", p)\n",
+    "    println(\"Recall: \", r)\n",
+    "    println(\"F1 score: \", fm)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "0d92379d",
+   "execution_count": 63,
+   "id": "27858480",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "precision (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8530612244897959\n",
+      "Error rate: 0.1469387755102041\n",
+      "Sensitivity: 1.0\n",
+      "Specificity: 0.6814159292035398\n",
+      "Precision: 0.7857142857142857\n",
+      "Recall: 1.0\n",
+      "F1 score: 0.88\n"
+     ]
     }
    ],
    "source": [
-    "function precision(target, model)\n",
-    "    p1 = filter(row -> (row[model] == 1) & (row[target] == 1), data)\n",
-    "    p2 = filter(row -> (row[model] == 1) & (row[target] == 0), data)\n",
-    "    return nrow(p1)/(nrow(p2) + nrow(p1))\n",
-    "end"
+    "evaluate(\"Model1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e5013c08",
+   "execution_count": 64,
+   "id": "25e1164a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "f1 (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7857142857142857\n",
+      "Error rate: 0.21428571428571427\n",
+      "Sensitivity: 0.7083333333333334\n",
+      "Specificity: 0.8761061946902655\n",
+      "Precision: 0.8697674418604651\n",
+      "Recall: 0.7083333333333334\n",
+      "F1 score: 0.7807933194154487\n"
+     ]
     }
    ],
    "source": [
-    "function f1(precision, recall)\n",
-    "    return 2*precision*recall/(precision+recall)\n",
-    "end"
+    "evaluate(\"Model2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "42bd69d2",
+   "execution_count": 65,
+   "id": "2ba0b931",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.7857142857142857"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9224489795918367\n",
+      "Error rate: 0.07755102040816327\n",
+      "Sensitivity: 0.9393939393939394\n",
+      "Specificity: 0.9026548672566371\n",
+      "Precision: 0.9185185185185185\n",
+      "Recall: 0.9393939393939394\n",
+      "F1 score: 0.9288389513108615\n"
+     ]
     }
    ],
    "source": [
-    "prec = precision(\"relation\", \"Model1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "43236dff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rec = recall(\"relation\", \"Model1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "e725d06b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.88"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1(prec, rec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "eb7c4c0b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8697674418604651"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prec = precision(\"relation\", \"Model2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "95b363df",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7083333333333334"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rec = recall(\"relation\", \"Model2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "08e6a6ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7807933194154487"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1(prec, rec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "5a19060c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9185185185185185"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prec = precision(\"relation\", \"Model3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "e7fae089",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9393939393939394"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rec = recall(\"relation\", \"Model3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "c793dec6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9288389513108615"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1(prec, rec)"
+    "evaluate(\"Model3\")"
    ]
   },
   {
