--- a/second_stage.ipynb
+++ b/second_stage.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "PyObject <spacy.lang.en.English object at 0x7f5aa696be10>"
+       "PyObject <spacy.lang.en.English object at 0x7fcdd8e63710>"
       ]
      },
      "execution_count": 3,
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "7290f6ae",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "get_hg_tokens (generic function with 4 methods)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "1968d8d5",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
        "check_connector (generic function with 1 method)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "id": "fd33b032",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "model_3 (generic function with 1 method)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b3640fe7",
    "metadata": {},
    "outputs": [],
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "id": "2ba0b931",
    "metadata": {},
    "outputs": [
@@ -887,13 +887,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8979591836734694\n",
-      "Error rate: 0.10204081632653061\n",
-      "Sensitivity: 0.9545454545454546\n",
-      "Specificity: 0.831858407079646\n",
-      "Precision: 0.8689655172413793\n",
-      "Recall: 0.9545454545454546\n",
-      "F1 score: 0.9097472924187726\n"
+      "Accuracy: 0.9224489795918367\n",
+      "Error rate: 0.07755102040816327\n",
+      "Sensitivity: 0.9393939393939394\n",
+      "Specificity: 0.9026548672566371\n",
+      "Precision: 0.9185185185185185\n",
+      "Recall: 0.9393939393939394\n",
+      "F1 score: 0.9288389513108615\n"
      ]
     }
    ],
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "id": "7bdca4ae",
    "metadata": {},
    "outputs": [
@@ -1071,7 +1071,7 @@
        "  16 │ Dollar in Narrow Range as Fed Of…  [\"C\", \"M\", \"M\", \"C\", \"T\", \"C\", \"…         1       1       0       0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "id": "4202337a",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
        "(Union{Nothing, Float64}[1.0 1.0; 1.0 1.0; nothing 1.0; nothing 1.0], Dict{Int64, Tuple{Vector{String}, Vector{PyObject}}}(0 => ([\"C\", \"C\", \"P\", \"C\"], [PyObject BoE, PyObject Talk, PyObject Lifts, PyObject Sterlin]), 2 => ([\"R\"], [PyObject [[BoE, Talk], Lifts, Sterlin]]), 1 => ([\"C\", \"P\", \"C\"], [PyObject [BoE, Talk], PyObject Lifts, PyObject Sterlin])), Any[\"C\", 'R'])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "id": "0cb28013",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1357,7 @@
        "(Union{Nothing, Float64}[nothing nothing … nothing 1.0; nothing nothing … 1.0 1.0; … ; 1.0 nothing … nothing 1.0; nothing nothing … nothing 1.0], Dict{Int64, Tuple{Vector{String}, Vector{PyObject}}}(0 => ([\"C\", \"M\", \"M\", \"C\", \"T\", \"C\", \"C\", \"P\"], [PyObject Dollar, PyObject on, PyObject Back, PyObject Foot, PyObject as, PyObject Omicron, PyObject Optimism, PyObject Grows]), 4 => ([\"C\", \"M\", \"C\", \"S\"], [PyObject Dollar, PyObject on, PyObject [Back, Foot], PyObject [as, [[Omicron, Optimism], Grows]]]), 5 => ([\"C\", \"C\", \"S\"], [PyObject Dollar, PyObject [on, [Back, Foot]], PyObject [as, [[Omicron, Optimism], Grows]]]), 6 => ([\"C\"], [PyObject [Dollar, [on, [Back, Foot]], [as, [[Omicron, Optimism], Grows]]]]), 2 => ([\"C\", \"M\", \"C\", \"T\", \"C\", \"P\"], [PyObject Dollar, PyObject on, PyObject [Back, Foot], PyObject as, PyObject [Omicron, Optimism], PyObject Grows]), 3 => ([\"C\", \"M\", \"C\", \"T\", \"R\"], [PyObject Dollar, PyObject on, PyObject [Back, Foot], PyObject as, PyObject [[Omicron, Optimism], Grows]]), 1 => ([\"C\", \"M\", \"M\", \"C\", \"T\", \"C\", \"P\"], [PyObject Dollar, PyObject on, PyObject Back, PyObject Foot, PyObject as, PyObject [Omicron, Optimism], PyObject Grows])), Any[\"C\", 'C', 'R', 'S', 'C', 'C'])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "id": "5d4d7f82",
    "metadata": {},
    "outputs": [
@@ -1384,7 +1384,7 @@
        " 'C': ASCII/Unicode U+0043 (category Lu: Letter, uppercase)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "id": "734837fc",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1412,7 @@
        "  1 => ([\"C\", \"M\", \"M\", \"C\", \"T\", \"C\", \"P\"], [PyObject Dollar, PyObject on, PyObject Back, PyObject Foot, PyObject as, PyObject [Omicron, Optimism], PyObject Grows])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "id": "979dea8f",
    "metadata": {},
    "outputs": [
@@ -1433,7 +1433,7 @@
        "([\"C\", \"M\", \"C\", \"S\"], PyObject[PyObject Dollar, PyObject on, PyObject [Back, Foot], PyObject [as, [[Omicron, Optimism], Grows]]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,31 +1444,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
-   "id": "5c11082d",
+   "execution_count": 43,
+   "id": "64206f23",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2]PyObject to\n",
-      "false"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div class=\"data-frame\"><p>19 rows × 6 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>Article</th><th>Atoms</th><th>relation</th><th>Model1</th><th>Model2</th><th>Model3</th></tr><tr><th></th><th title=\"String\">String</th><th title=\"Vector{String}\">Array…</th><th title=\"Int64\">Int64</th><th title=\"Int64\">Int64</th><th title=\"Int64\">Int64</th><th title=\"Int64\">Int64</th></tr></thead><tbody><tr><th>1</th><td>USDCAD tries to keep the upside momentum going</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;M&quot;, &quot;P&quot;, &quot;M&quot;, &quot;M&quot;, &quot;C&quot;, &quot;P&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>2</th><td>EURUSD dips back below 100 day MA</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;M&quot;, &quot;T&quot;, &quot;C&quot;, &quot;C&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>3</th><td>Dollar Edges Higher Off Range Lows</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;M&quot;, &quot;T&quot;, &quot;C&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>4</th><td>Pound’s Pandemic Peak Versus Euro Shows Faith in Rate Divergence</td><td>[&quot;C&quot;, &quot;B&quot;, &quot;M&quot;, &quot;C&quot;, &quot;B&quot;, &quot;C&quot;, &quot;P&quot;, &quot;C&quot;, &quot;B&quot;, &quot;C&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>5</th><td>Lira Faces Inflation Test</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;C&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>6</th><td>Turkish Lira Continues Descent</td><td>[&quot;M&quot;, &quot;C&quot;, &quot;P&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>7</th><td>Lira Slumps to New Low</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>8</th><td>EURUSD Drops to New Low for the Year</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;M&quot;, &quot;C&quot;, &quot;B&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>9</th><td>Dollar dips but shows biggest weekly gain in almost 3 months</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;J&quot;, &quot;P&quot;, &quot;M&quot;, &quot;M&quot;, &quot;C&quot;, &quot;B&quot;, &quot;M&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>10</th><td>Dollar Climbs to 2021 Highs</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;C&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>11</th><td>Dollar Set For Winning Week</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>12</th><td>Dollar Remains Near Lows</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>13</th><td>Dollar Edges Off Three Week Lows</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;C&quot;, &quot;C&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>14</th><td>Dollar Climbs to Multi-Month Highs</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;M&quot;, &quot;M&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>15</th><td>Dollar rises but still set for biggest weekly loss since May</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;J&quot;, &quot;M&quot;, &quot;P&quot;, &quot;T&quot;, &quot;M&quot;, &quot;M&quot;, &quot;C&quot;, &quot;B&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>16</th><td>US dollar posts best month since November 2016</td><td>[&quot;C&quot;, &quot;C&quot;, &quot;P&quot;, &quot;M&quot;, &quot;C&quot;, &quot;B&quot;, &quot;C&quot;, &quot;M&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>17</th><td>Dollar Retains Recent Strength</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;M&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>18</th><td>Dollar set for second consecutive monthly loss vs euro and pound</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;M&quot;, &quot;M&quot;, &quot;M&quot;, &quot;C&quot;, &quot;B&quot;, &quot;C&quot;, &quot;J&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr><tr><th>19</th><td>Dollar Steadies Near Multi-Month Lows</td><td>[&quot;C&quot;, &quot;P&quot;, &quot;T&quot;, &quot;M&quot;, &quot;M&quot;, &quot;C&quot;, &quot;C&quot;]</td><td>0</td><td>1</td><td>1</td><td>0</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|cccccc}\n",
+       "\t& Article & Atoms & relation & Model1 & Model2 & Model3\\\\\n",
+       "\t\\hline\n",
+       "\t& String & Array… & Int64 & Int64 & Int64 & Int64\\\\\n",
+       "\t\\hline\n",
+       "\t1 & USDCAD tries to keep the upside momentum going & [\"C\", \"P\", \"M\", \"P\", \"M\", \"M\", \"C\", \"P\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t2 & EURUSD dips back below 100 day MA & [\"C\", \"P\", \"M\", \"T\", \"C\", \"C\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t3 & Dollar Edges Higher Off Range Lows & [\"C\", \"P\", \"M\", \"T\", \"C\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t4 & Pound’s Pandemic Peak Versus Euro Shows Faith in Rate Divergence & [\"C\", \"B\", \"M\", \"C\", \"B\", \"C\", \"P\", \"C\", \"B\", \"C\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t5 & Lira Faces Inflation Test & [\"C\", \"P\", \"C\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t6 & Turkish Lira Continues Descent & [\"M\", \"C\", \"P\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t7 & Lira Slumps to New Low & [\"C\", \"P\", \"T\", \"M\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t8 & EURUSD Drops to New Low for the Year & [\"C\", \"P\", \"T\", \"M\", \"C\", \"B\", \"M\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t9 & Dollar dips but shows biggest weekly gain in almost 3 months & [\"C\", \"P\", \"J\", \"P\", \"M\", \"M\", \"C\", \"B\", \"M\", \"M\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t10 & Dollar Climbs to 2021 Highs & [\"C\", \"P\", \"T\", \"C\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t11 & Dollar Set For Winning Week & [\"C\", \"P\", \"T\", \"M\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t12 & Dollar Remains Near Lows & [\"C\", \"P\", \"T\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t13 & Dollar Edges Off Three Week Lows & [\"C\", \"P\", \"T\", \"C\", \"C\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t14 & Dollar Climbs to Multi-Month Highs & [\"C\", \"P\", \"T\", \"M\", \"M\", \"M\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t15 & Dollar rises but still set for biggest weekly loss since May & [\"C\", \"P\", \"J\", \"M\", \"P\", \"T\", \"M\", \"M\", \"C\", \"B\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t16 & US dollar posts best month since November 2016 & [\"C\", \"C\", \"P\", \"M\", \"C\", \"B\", \"C\", \"M\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t17 & Dollar Retains Recent Strength & [\"C\", \"P\", \"M\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t18 & Dollar set for second consecutive monthly loss vs euro and pound & [\"C\", \"P\", \"T\", \"M\", \"M\", \"M\", \"C\", \"B\", \"C\", \"J\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\t19 & Dollar Steadies Near Multi-Month Lows & [\"C\", \"P\", \"T\", \"M\", \"M\", \"C\", \"C\"] & 0 & 1 & 1 & 0 \\\\\n",
+       "\\end{tabular}\n"
+      ],
       "text/plain": [
-       "false"
+       "\u001b[1m19×6 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m Article                           \u001b[0m\u001b[1m Atoms                             \u001b[0m\u001b[1m relation \u001b[0m\u001b[1m Model1 \u001b[0m\u001b[1m Model2 \u001b[0m\u001b[1m Model3 \u001b[0m\n",
+       "\u001b[1m     \u001b[0m│\u001b[90m String                            \u001b[0m\u001b[90m Array…                            \u001b[0m\u001b[90m Int64    \u001b[0m\u001b[90m Int64  \u001b[0m\u001b[90m Int64  \u001b[0m\u001b[90m Int64  \u001b[0m\n",
+       "─────┼────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
+       "   1 │ USDCAD tries to keep the upside …  [\"C\", \"P\", \"M\", \"P\", \"M\", \"M\", \"…         0       1       1       0\n",
+       "   2 │ EURUSD dips back below 100 day MA  [\"C\", \"P\", \"M\", \"T\", \"C\", \"C\", \"…         0       1       1       0\n",
+       "   3 │ Dollar Edges Higher Off Range Lo…  [\"C\", \"P\", \"M\", \"T\", \"C\", \"C\"]            0       1       1       0\n",
+       "   4 │ Pound’s Pandemic Peak Versus Eur…  [\"C\", \"B\", \"M\", \"C\", \"B\", \"C\", \"…         0       1       1       0\n",
+       "   5 │ Lira Faces Inflation Test          [\"C\", \"P\", \"C\", \"C\"]                      0       1       1       0\n",
+       "   6 │ Turkish Lira Continues Descent     [\"M\", \"C\", \"P\", \"C\"]                      0       1       1       0\n",
+       "   7 │ Lira Slumps to New Low             [\"C\", \"P\", \"T\", \"M\", \"C\"]                 0       1       1       0\n",
+       "   8 │ EURUSD Drops to New Low for the …  [\"C\", \"P\", \"T\", \"M\", \"C\", \"B\", \"…         0       1       1       0\n",
+       "   9 │ Dollar dips but shows biggest we…  [\"C\", \"P\", \"J\", \"P\", \"M\", \"M\", \"…         0       1       1       0\n",
+       "  10 │ Dollar Climbs to 2021 Highs        [\"C\", \"P\", \"T\", \"C\", \"C\"]                 0       1       1       0\n",
+       "  11 │ Dollar Set For Winning Week        [\"C\", \"P\", \"T\", \"M\", \"C\"]                 0       1       1       0\n",
+       "  12 │ Dollar Remains Near Lows           [\"C\", \"P\", \"T\", \"C\"]                      0       1       1       0\n",
+       "  13 │ Dollar Edges Off Three Week Lows   [\"C\", \"P\", \"T\", \"C\", \"C\", \"C\"]            0       1       1       0\n",
+       "  14 │ Dollar Climbs to Multi-Month Hig…  [\"C\", \"P\", \"T\", \"M\", \"M\", \"M\", \"…         0       1       1       0\n",
+       "  15 │ Dollar rises but still set for b…  [\"C\", \"P\", \"J\", \"M\", \"P\", \"T\", \"…         0       1       1       0\n",
+       "  16 │ US dollar posts best month since…  [\"C\", \"C\", \"P\", \"M\", \"C\", \"B\", \"…         0       1       1       0\n",
+       "  17 │ Dollar Retains Recent Strength     [\"C\", \"P\", \"M\", \"C\"]                      0       1       1       0\n",
+       "  18 │ Dollar set for second consecutiv…  [\"C\", \"P\", \"T\", \"M\", \"M\", \"M\", \"…         0       1       1       0\n",
+       "  19 │ Dollar Steadies Near Multi-Month…  [\"C\", \"P\", \"T\", \"M\", \"M\", \"C\", \"…         0       1       1       0"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_connector(edges[2])"
+    "filter(row -> (row[\"Model2\"] == 1) & (row[\"relation\"] == 0) & (row[\"Model3\"] == 0) & (row[\"Model1\"] == 1), data)"
    ]
   }
  ],
